lecture series url changed and height fixed

--- a/main_page/templates/main_page/talks.html
+++ b/main_page/templates/main_page/talks.html
@@ -22,13 +22,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item bg_cover active"
-                        style="background-image: url({% static 'main_page/img/bg-img/auditorium_bg.jpg' %})">
+                        style="background-image: url({% static 'main_page/img/bg-img/auditorium_bg.jpg' %}); height:660px;">
                         <div class="carousel-caption">
                             <div class="container">
                                 <div class="row justify-content-center">
                                     <div class="col-xl-6 col-lg-7 col-sm-10">
                                         <h2 class="carousel-title" style="background-color: rgba(255, 255, 255, 0.7);
-                                        padding: 20px;border-radius: 10px; color: black;">IIT Ropar Lecture Series</h2>
+                                        padding: 20px;border-radius: 10px; color: black;">ADVITIYA Lecture Series</h2>
                                         <!-- <a href="{% url 'main_page:events'%}" class="btn confer-btn-white">Explore</a>
                                         <ul class="carousel-btn rounded-buttons">
 
