Workshop Accommodation Modify

--- a/main_page/templates/main_page/accommodation.html
+++ b/main_page/templates/main_page/accommodation.html
@@ -34,7 +34,7 @@
                         <img src="{% static 'main_page/img/core-img/p1.png' %}" alt="">
                     </div></center>
                     <h2 class="ticket-price"><span>Rs</span>{{accommodation_fee}}</h2>
-                    <a href="{% url 'accomodation:register_for_accommodation' %}" class="btn confer-btn w-100 mb-30">Get Accomodation<i
+                    <a href="{% url 'main_page:workshop_accomodation_curr' %}" class="btn confer-btn w-100 mb-30">Get Accomodation<i
                             class="zmdi zmdi-long-arrow-right"></i></a>
                 </div>
             </div>
@@ -45,6 +45,7 @@
                         <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Mattress, Pillow and Blanket (if needed, 
                             as per the weather) provided.</p>
                         <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Free High Speed Internet.</p>
+                        <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Two meals per day</p>
 
                     </div>
                 </div>
