--- a/main_page/templates/main_page/event1.html
+++ b/main_page/templates/main_page/event1.html
@@ -102,8 +102,8 @@
                             <div class="post-author-content">
 
                                 <br>
-                                <!-- <p>Venue of Event: {{event.venue}}</p>
-                                <p>Timings: {{event.start_date_time}}</p> -->
+                                <p>Venue of Event: {{event.venue}}</p>
+                                <p>Timings: {{event.start_date_time}}</p>
                                 <h5>Event Coordinator</h5>
                                 <span>Name: {{event.coordinator.name}}</span>
                                 <span>Contact Details: {{event.coordinator.phone }}</span>
