--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -61,7 +61,8 @@
                                 <li><a href="{% url 'main_page:sponsors'%}">Sponsors</a></li>
                                 <li><a href="#"><i class="zmdi zmdi-caret-down-circle"></i> Accommodation</a>
                                     <ul class="dropdown" style="width: 200%;">
-                                        <li><a href="{% url 'main_page:get_workshop_accommodation' %}">Workshop Participants</a></li>
+                                        <li><a href="{% url 'main_page:get_workshop_accommodation' %}">Workshop
+                                                Participants</a></li>
                                         <li><a href="{% url 'accomodation:index' %}">Non-Workshop Participants</a></li>
                                     </ul>
                                 </li>
@@ -208,6 +209,118 @@
     <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
     <script src="{% static 'main_page/js/active.js' %}"></script>
     <!-- <script src="{% static 'main_page/js/jquery.min.js' %}"></script> -->
+
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
+    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-messaging.js"></script>
+    <!-- START INITIALIZATION CODE -->
+    <script>
+        // Initialize Firebase
+        var firebaseConfig = {
+            apiKey: "AIzaSyDbNJ--j-m1WNrMxSHys81rjseH4FMuHys",
+            authDomain: "advitiya2020-719da.firebaseapp.com",
+            databaseURL: "https://advitiya2020-719da.firebaseio.com",
+            projectId: "advitiya2020-719da",
+            storageBucket: "advitiya2020-719da.appspot.com",
+            messagingSenderId: "598295117177",
+            appId: "1:598295117177:web:946a6512b805df9b0203a8",
+            measurementId: "G-WRN5HSTQL9"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
+    <!-- END INITIALIZATION CODE -->
+    <!-- ******************************************************** -->
+    <script>
+        // [START get_messaging_object]
+        // Retrieve Firebase Messaging object.
+        const messaging = firebase.messaging();
+        // [END get_messaging_object]
+
+        // [START refresh_token]
+        // Callback fired if Instance ID token is updated.
+        messaging.onTokenRefresh(function () {
+            messaging.getToken()
+                .then(function (refreshedToken) {
+                    console.log('Token refreshed.');
+                    // Indicate that the new Instance ID token has not yet been sent to the
+                    // Send Instance ID token to app server.
+                    sendTokenToServer(refreshedToken);
+                })
+                .catch(function (err) {
+                    console.log('Unable to retrieve refreshed token ', err);
+                });
+        });
+        requestPermission();
+        // [END refresh_token]
+        messaging.onMessage(function (payload) {
+            console.log("Message received. ", payload);
+        });
+        // [END receive_message]
+
+
+        // Send the Instance ID token your application server, so that it can:
+        // - send messages back to this app
+        // - subscribe/unsubscribe the token from topics
+        function sendTokenToServer(currentToken) {
+            if (!isTokenSentToServer()) {
+                console.log('Sending token to server...');
+                // TODO(developer): Send the current token to your server.
+                fetch('/devices/', {
+                    method: "POST",
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        'registration_id': currentToken,
+                        'type': 'web',
+                    }),
+                    credentials: "include",
+                }).then(function (response) {
+                    console.log(response);
+                })
+                setTokenSentToServer(true);
+            } else {
+                console.log('Token already sent to server so won\'t send it again ' +
+                    'unless it changes');
+            }
+
+        }
+
+        function isTokenSentToServer() {
+            if (window.localStorage.getItem('sentToServer') == 1) {
+                return true;
+            }
+            return false;
+        }
+
+        function setTokenSentToServer(sent) {
+            if (sent) {
+                window.localStorage.setItem('sentToServer', 1);
+            } else {
+                window.localStorage.setItem('sentToServer', 0);
+            }
+        }
+
+
+        function requestPermission() {
+            console.log('Requesting permission...');
+            // [START request_permission]
+            messaging.requestPermission()
+                .then(function () {
+                    console.log('Notification permission granted.');
+                })
+                .catch(function (err) {
+                    console.log('Unable to get permission to notify.', err);
+                });
+            // [END request_permission]
+        }
+
+
+    </script>
 </body>
 
 </html>
