Startup Conclve Startup

--- a/main_page/templates/main_page/register_team.html
+++ b/main_page/templates/main_page/register_team.html
@@ -23,7 +23,7 @@
                         {% csrf_token %}
                         {{ team_form | crispy }}
                         {{ team_member_formset | crispy }}
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Submit</button><br><br>
                     </form>
                 </div>
             </div>
