Startup Conclave BootCamp

--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -13,8 +13,8 @@
                 <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                     <!-- Icon -->
                     <div class="single-blog-thumb">
-                        <center><a href="{% url 'main_page:events' %}">
-                                <img src="{{ workshop.image.url }}" style="height: 200px;" alt=""></a>
+                        <center><a href="{% url 'startup_conclave:register_for_bootcamp' %}">
+                                <img src="{% static 'startup_conclave/img/bootcamp.jpg' %}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
                     <h5>BootCamp</h5>
@@ -24,14 +24,10 @@
 
                     </div>
                     <br>
-                    <a href="{% url 'main_page:events' %}" class="btn confer-btn-white"
+                    <a href="{% url 'startup_conclave:register_for_bootcamp' %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
                         Now</a>
-                    <a href="{{ workshop.rulebook }}" class="btn confer-btn-white"
-                        style="border: 2px solid rgb(43, 2, 143); color: black;"
-                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
-                        <i class="zmdi zmdi-info zmdi-hc-lg"></i> info</a>
 
                 </div>
 
@@ -40,14 +36,14 @@
                 <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                     <!-- Icon -->
                     <div class="single-blog-thumb">
-                        <center><a href="{% url 'main_page:events' %}">
+                        <center><a href="{% url 'startup_conclave:register_for_startup' %}">
                             <img src="{% static 'startup_conclave/img/startup.jpg' %}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
                     <h5>Startup</h5>
                     <div class="post-meta">
-                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 1 Day</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th February, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
 
                     </div>
                     <br>
@@ -55,10 +51,6 @@
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
                         Now</a>
-                    <a href="{{ workshop.rulebook }}" class="btn confer-btn-white"
-                        style="border: 2px solid rgb(43, 2, 143); color: black;"
-                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
-                        <i class="zmdi zmdi-info zmdi-hc-lg"></i> info</a>
 
                 </div>
 
@@ -67,25 +59,21 @@
                 <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                     <!-- Icon -->
                     <div class="single-blog-thumb">
-                        <center><a href="{% url 'main_page:events' %}">
-                                <img src="{{ workshop.image.url }}" style="height: 200px;" alt=""></a>
+                        <center><a href="{% url 'startup_conclave:register_for_startup' %}">
+                            <img src="{% static 'startup_conclave/img/startup.jpg' %}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
-                    <h5>Get Stall</h5>
+                    <h5>Startup</h5>
                     <div class="post-meta">
-                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 1 Day</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th February, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
 
                     </div>
                     <br>
-                    <a href="{% url 'main_page:events' %}" class="btn confer-btn-white"
+                    <a href="{% url 'startup_conclave:register_for_startup' %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
                         Now</a>
-                    <a href="{{ workshop.rulebook }}" class="btn confer-btn-white"
-                        style="border: 2px solid rgb(43, 2, 143); color: black;"
-                        onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
-                        <i class="zmdi zmdi-info zmdi-hc-lg"></i> info</a>
 
                 </div>
 
