Fix null image error

--- a/main_page/templates/main_page/event1.html
+++ b/main_page/templates/main_page/event1.html
@@ -25,7 +25,7 @@
 <!-- Breadcrumb Area End -->
 
 <!-- Blog Area Start -->
-<section class="confer-blog-details-area section-padding-100-0" style="background-image: url({{ event.image.url }});
+<section class="confer-blog-details-area section-padding-100-0" style="background-image: url({{ event.photo_url }});
                 background-size: cover; background-position: center; background-repeat: no-repeat;">
     <div class="container">
         <div class="row justify-content-center">
@@ -35,11 +35,6 @@
                     <!-- Post Content -->
                     <div class="post-details-content" style="background-color: rgba(255, 255, 255, 0.7);
                             padding: 20px;border-radius: 10px;">
-
-                        <!-- Post Thumbnail -->
-                        <!-- <div class="post-blog-thumbnail mb-30">
-                            <img src="{{ event.image.url }}" alt="" width="450px" height="350px">
-                        </div> -->
 
                         <!-- Post Title -->
                         <h4 class="post-title">ABOUT EVENT</h4>
