--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -77,7 +77,7 @@
                     <!-- Single blog Thumb -->
                     <div class="single-blog-thumb">
                         <center><a href="{% url 'main_page:event_page' event.id  %}">
-                                <img src="{{ event.image.url }}" style="height: 200px;" alt=""></a>
+                                <img src="{{ event.photo_url }}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
                     <div class="single-blog-text text-center">
