--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -299,7 +299,7 @@
                                         <div class="single-schedule-tumb-info d-flex align-items-center">
                                             <!-- Single Schedule Thumb -->
                                             <div class="single-schedule-tumb">
-                                                <img src="{{ events.image.url }}" alt="">
+                                                <img src="{{ events.photo_url }}" alt="">
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="single-schedule-info">
@@ -337,7 +337,7 @@
                                         <div class="single-schedule-tumb-info d-flex align-items-center">
                                             <!-- Single Schedule Thumb -->
                                             <div class="single-schedule-tumb">
-                                                <img src="{{ events.image.url }}" alt="">
+                                                <img src="{{ events.photo_url }}" alt="">
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="single-schedule-info">
@@ -376,7 +376,7 @@
                                         <div class="single-schedule-tumb-info d-flex align-items-center">
                                             <!-- Single Schedule Thumb -->
                                             <div class="single-schedule-tumb">
-                                                <img src="{{ events.image.url }}" alt="">
+                                                <img src="{{ events.photo_url }}" alt="">
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="single-schedule-info">
