--- a/main_page/templates/main_page/talks.html
+++ b/main_page/templates/main_page/talks.html
@@ -52,7 +52,7 @@
                     <div class="carousel-item" style="height: auto;">
                         <div class="row h-100">
                             <div class="col-md-6 h-md-50" style="overflow: hidden; max-height: 767px;">
-                                <img src="{{ person.image.url }}" style="width: 100%;">
+                                <img src="{{ person.photo_url }}" style="width: 100%;">
                             </div>
                             <div class="col-md-6 h-md-50" style="padding: 20px;">
                                 <div class="row justify-content-center d-table h-50">
