--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -59,8 +59,8 @@
                 <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                     <!-- Icon -->
                     <div class="single-blog-thumb">
-                        <center><a href="{% url 'startup_conclave:register_for_startup' %}">
-                            <img src="{% static 'startup_conclave/img/startup.jpg' %}" style="height: 200px;" alt=""></a>
+                        <center><a href="{% url 'startup_conclave:pay_for_stall' %}">
+                            <img src="{% static 'startup_conclave/img/stall.jpg' %}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
                     <h5>Startup</h5>
@@ -70,7 +70,7 @@
 
                     </div>
                     <br>
-                    <a href="{% url 'startup_conclave:register_for_startup' %}" class="btn confer-btn-white"
+                    <a href="{% url 'startup_conclave:pay_for_stall' %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
                         Now</a>
