Hide Startup & Stalls

--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -32,9 +32,8 @@
                 </div>
 
             </div>
-            <div class="col-12 col-md-6 col-xl-4">
+            <!-- <div class="col-12 col-md-6 col-xl-4">
                 <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <!-- Icon -->
                     <div class="single-blog-thumb">
                         <center><a href="{% url 'startup_conclave:register_for_startup' %}">
                             <img src="{% static 'startup_conclave/img/startup.jpg' %}" style="height: 200px;" alt=""></a>
@@ -43,7 +42,7 @@
                     <h5>Startup</h5>
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 8th & 9th February, 2020</a>
 
                     </div>
                     <br>
@@ -57,16 +56,15 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4">
                 <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <!-- Icon -->
                     <div class="single-blog-thumb">
                         <center><a href="{% url 'startup_conclave:pay_for_stall' %}">
                             <img src="{% static 'startup_conclave/img/stall.jpg' %}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
-                    <h5>Startup</h5>
+                    <h5>Stalls</h5>
                     <div class="post-meta">
                         <a class="post-date"><i class="zmdi zmdi-time-interval"></i> 2 Days</a><br>
-                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 7th & 8th February, 2020</a>
+                        <a class="post-date"><i class="zmdi zmdi-calendar-check"></i> 8th & 9th February, 2020</a>
 
                     </div>
                     <br>
@@ -77,7 +75,7 @@
 
                 </div>
 
-            </div>
+            </div>-->
         </div>
     </div>
 </section>
