Startup Conclave Link on Home Page

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -68,8 +68,8 @@
                                 </li>
                                 <li><a href="#"><i class="zmdi zmdi-caret-down-circle"></i> More</a>
                                     <ul class="dropdown" style="width: 300%;">
+                                        <li><a href="{% url 'startup_conclave:index' %}">Startup Conclave</a></li>
                                         <li><a href="{% url 'TSP:home' %}">Techno School Program(TSP)</a></li>
-
                                         <li><a href="{% url 'ca:home' %}">Campus Ambassador</a></li>
                                     </ul>
                                 </li>
