--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -55,22 +55,24 @@
                         <div class="classynav">
                             <ul id="nav" class="resizeflex">
                                 <li><a href="{% url 'main_page:events'%}">Events</a></li>
-                                <!-- <li><a href="{% url 'accomodation:index'%}">Talks</a></li> -->
+                                <li><a href="{% url 'main_page:talks'%}">Lectures</a></li>
                                 <li><a href="{% url 'techconnect:index'%}">TechConnect</a></li>
                                 <li><a href="{% url 'main_page:workshop'%}">Workshops</a></li>
                                 <li><a href="{% url 'main_page:sponsors'%}">Sponsors</a></li>
-                                <li><a href="#"><i class="zmdi zmdi-caret-down-circle"></i> Accommodation</a>
-                                    <ul class="dropdown" style="width: 200%;">
-                                        <li><a href="{% url 'main_page:get_workshop_accommodation' %}">Workshop
-                                                Participants</a></li>
-                                        <li><a href="{% url 'accomodation:index' %}">Non-Workshop Participants</a></li>
-                                    </ul>
-                                </li>
+
                                 <li><a href="#"><i class="zmdi zmdi-caret-down-circle"></i> More</a>
                                     <ul class="dropdown" style="width: 300%;">
                                         <li><a href="{% url 'TSP:home' %}">Techno School Program(TSP)</a></li>
 
                                         <li><a href="{% url 'ca:home' %}">Campus Ambassador</a></li>
+                                        <li><a href="#"><i class="zmdi zmdi-caret-down-circle"></i> Accommodation</a>
+                                            <ul class="dropdown" style="width: 200%;">
+                                                <li><a href="{% url 'main_page:get_workshop_accommodation' %}">Workshop
+                                                        Participants</a></li>
+                                                <li><a href="{% url 'accomodation:index' %}">Non-Workshop
+                                                        Participants</a></li>
+                                            </ul>
+                                        </li>
                                     </ul>
                                 </li>
 
