--- a/main_page/templates/main_page/talks.html
+++ b/main_page/templates/main_page/talks.html
@@ -15,38 +15,20 @@
                 <ol class="carousel-indicators">
                     <li data-target="#carouselOne" data-slide-to="0" class="active"></li>
                     {% for person in people %}
-                        {% if person.show %}
-                            <li data-target="#carouselOne" data-slide-to="{{ forloop.counter }}"></li>
-                        {% endif %}
+                    {% if person.show %}
+                    <li data-target="#carouselOne" data-slide-to="{{ forloop.counter }}"></li>
+                    {% endif %}
                     {% endfor %}
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item bg_cover active"
-                        style="background-image: url({% static 'main_page/img/bg-img/web_bg.jpg' %}); height:660px;">
-                        <div class="carousel-caption">
-                            <div class="container">
-                                <div class="row justify-content-center">
-                                    <div class="col-xl-6 col-lg-7 col-sm-10">
-                                    </div>
-                                </div>
+                    <div class="carousel-item bg_cover active">
+                        <div class="container h-100" style="display: table; padding: 0;">
+                            <div style="vertical-align: middle; display: table-cell">
+                                <img src="{% static 'main_page/img/bg-img/web bg.png' %}">
                             </div>
                         </div>
                     </div>
 
-                    <!-- <div class="carousel-item bg_cover" style="background-image: url(assets/images/slider-2.jpg)">
-                        <div class="carousel-caption">
-                            <div class="container">
-                                <div class="row justify-content-center">
-                                    <div class="col-xl-6 col-lg-7 col-sm-10">
-                                        <h2 class="carousel-title">Based on Latest Bootstrap & HTML5</h2>
-                                        <ul class="carousel-btn rounded-buttons">
-
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                     {% for person in people %}
                     {% if person.show %}
                     <div class="carousel-item" style="height: auto;">
@@ -68,16 +50,16 @@
                                             <br>
                                         </center>
                                         <h4 style="color: white;">About {{person.name}}</h1><br>
-                                        <ul style="color: white;">
-                                            <li> &nbsp &nbsp &nbsp &nbsp {{person.para1}}</li>
-                                            <br>
-                                            <li> &nbsp &nbsp &nbsp &nbsp {{person.para2}}</li>
-                                            <br>
-                                            <li> &nbsp &nbsp &nbsp &nbsp {{person.para3}}</li>
-                                            <br>
-                                            <li> &nbsp &nbsp &nbsp &nbsp {{person.para4}}</li>
-                                            <br>
-                                        </ul>
+                                            <ul style="color: white;">
+                                                <li> &nbsp &nbsp &nbsp &nbsp {{person.para1}}</li>
+                                                <br>
+                                                <li> &nbsp &nbsp &nbsp &nbsp {{person.para2}}</li>
+                                                <br>
+                                                <li> &nbsp &nbsp &nbsp &nbsp {{person.para3}}</li>
+                                                <br>
+                                                <li> &nbsp &nbsp &nbsp &nbsp {{person.para4}}</li>
+                                                <br>
+                                            </ul>
                                     </div>
                                 </div>
                             </div>
