--- a/main_page/templates/main_page/workshop_accomodations.html
+++ b/main_page/templates/main_page/workshop_accomodations.html
@@ -13,18 +13,23 @@
                 <ul class="list-group">
                     {% for acc in accs %}
                     <li class="list-group-item">
+                        {% if acc.is_paid %}
                         You have already paid for accommodation on 
+                        {% else %}
+                        Accomodation for
+                        {% endif %}
                         {% if acc.accomodation_on_7th %}
-                        7th
+                        <b>7th</b>
                         {% endif %}
                         {% if acc.accomodation_on_8th %}
-                        8th
+                        <b>8th</b>
                         {% endif %}
                         {% if acc.accomodation_on_9th %}
-                        9th
+                        <b>9th</b>
                         {% endif %}
-                        {% if acc.transaction_id != "0" and acc.transaction_id != "none" %}.
+                        {% if acc.is_paid %}
                         {% else %}
+                        (not paid)
                         <a href="{% url 'main_page:workshop_accomodation' pre_id=acc.id %}" style="color: blue;">Pay</a>
                         {% endif %}
                     </li>
