Fix main page background

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -42,8 +42,8 @@
 
         <!-- Single Slide -->
         <div class="single-welcome-slide bg-img bg-overlay jarallax">
-            <div class="container h-100" style="margin-top: 105px; display: table;">
-                <div style="vertical-align: middle; display: table-cell">
+            <div class="container h-100" style="display: table; padding: 0;">
+                <div style="vertical-align: middle; display: table-cell; padding-top: 105px;">
                     <img src="{% static 'main_page/img/bg-img/web bg.png' %}">
                 </div>
             </div>
