Startup Conclave Stalls

--- a/startup_conclave/templates/startup_conclave/index.html
+++ b/startup_conclave/templates/startup_conclave/index.html
@@ -54,10 +54,10 @@
                 </div>
 
             </div>
-            <!-- <div class="col-12 col-md-6 col-xl-4">
+            <div class="col-12 col-md-6 col-xl-4">
                 <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                     <div class="single-blog-thumb">
-                        <center><a href="{% url 'startup_conclave:pay_for_stall' %}">
+                        <center><a href="{% url 'startup_conclave:register_for_stall' %}">
                             <img src="{% static 'startup_conclave/img/stall.jpg' %}" style="height: 200px;" alt=""></a>
                         </center>
                     </div>
@@ -68,14 +68,14 @@
 
                     </div>
                     <br>
-                    <a href="{% url 'startup_conclave:pay_for_stall' %}" class="btn confer-btn-white"
+                    <a href="{% url 'startup_conclave:register_for_stall' %}" class="btn confer-btn-white"
                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">Register
                         Now</a>
 
                 </div>
 
-            </div>-->
+            </div>
         </div>
     </div>
 </section>
