Workshop Referral link and contacts update

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -143,8 +143,12 @@
                             <p>Indian Institute of Technology Ropar, Bara Phool, Birla Seed Farms, Rupnagar,Punjab,
                                 INDIA 140001
                             </p>
-                            <p><i class="fa fa-phone mr-3"></i>+91 9915405007</p>
-                            <p><i class="fa fa-phone mr-3"></i>+91 8619174962</p>
+                            <p><i class="fa fa-phone mr-3"></i>Website Related Queries: Adarsh(
+                                    <a href="tel:+91-7355404764" style="color: white;">7355404764</a>)</p>
+                            <p><i class="fa fa-phone mr-3"></i>Marketing Concerns: Rahul(
+                                    <a href="tel:+91-9915405007" style="color: white;">9915405007</a>)</p>
+                            <p><i class="fa fa-phone mr-3"></i>Event Related Queries: Abhinash(
+                                    <a href="tel:+91-8001481473" style="color: white;">8001481473</a>)</p>
                             <p><i class="fa fa-envelope-o mr-3"></i>advitiya@iitrpr.ac.in</p>
                         </div>
                     </div>
@@ -159,11 +163,8 @@
                                 <li><a href="{% url 'main_page:workshop'%}">Workshops at IIT Ropar</a></li>
                             </ul>
                             <br>
-                            <h5 class="widget-title"><a href="#" style="color: white;">Talks</a></h5>
-                            <!-- Footer Nav -->
-                            <ul class="footer-nav">
-                                <li><a href="{% url 'main_page:talks' %}">Click here</a></li>
-                            </ul>
+                            <h5 class="widget-title"><a href="{% url 'main_page:talks' %}" style="color: white;">Lectures</a></h5>
+                            <h5 class="widget-title"><a href="{% url 'startup_conclave:index' %}" style="color: white;">Startup Conclave</a></h5>
                         </div>
                     </div>
 
