--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -47,6 +47,14 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                                     'Personality Development and Placement
                                     Preparation' and other on any one of the below mentioned technical topics.)
                                     </li>
+                                <li style="text-align: justify;"><br>If you are a Campus Ambassador for ADVITIYA, you can register 
+                                    for any of the workshops listed here for free. Get 10 people to register for some workshop and refer you
+                                    after payment. Thereafter, you may register for any workshop for free.
+                                </li><br>
+                                <li style="text-align: justify;">After you register for some workshop, you may give credit for 
+                                    registration to some of our Campus Ambassador. If you have already registered, 
+                                    <a href="{% url 'main_page:reffer_ca' %}">click here</a> to give them credits.
+                                </li><br>
                             </ul>
                         </div>
                     </div>
