added sponsor links

--- a/main_page/templates/main_page/sponsors.html
+++ b/main_page/templates/main_page/sponsors.html
@@ -22,59 +22,59 @@
                     <div class="our-sponsor-area d-flex flex-wrap">
                     
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/ncc.jpg' %}" alt=""></a>
+                            <a href="http://ncclimited.com/"><img src="{% static 'main_page/img/core-img/ncc.jpg' %}" alt=""></a>
                         </div>
                     
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/tees.png' %}" alt=""></a>
+                            <a href="http://teeshood.com/en/"><img src="{% static 'main_page/img/core-img/tees.png' %}" alt=""></a>
                         </div>
                     
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/grab.png' %}" alt=""></a>
+                            <a href="https://www.grabon.in/"><img src="{% static 'main_page/img/core-img/grab.png' %}" alt=""></a>
                         </div>
                         
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/spartan.jpg' %}" alt=""></a>
+                            <a href="https://www.spartanpoker.com/"><img src="{% static 'main_page/img/core-img/spartan.jpg' %}" alt=""></a>
                         </div>
         
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/web.png' %}" alt=""></a>
+                            <a href="https://www.webstaff.jp/en/"><img src="{% static 'main_page/img/core-img/web.png' %}" alt=""></a>
                         </div>
         
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/jeol.png' %}" alt=""></a>
+                            <a href="https://www.jeol.co.jp/en/"><img src="{% static 'main_page/img/core-img/jeol.png' %}" alt=""></a>
                         </div>
                         
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/sbi.png' %}" alt=""></a>
+                            <a href="https://www.onlinesbi.com/"><img src="{% static 'main_page/img/core-img/sbi.png' %}" alt=""></a>
                         </div>
                     
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/hover.jpg' %}" alt=""></a>
+                            <a href="https://hoverrobotix.com/"><img src="{% static 'main_page/img/core-img/hover.jpg' %}" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/nvi.png' %}" alt=""></a>
+                            <a href="https://www.nvidia.com/en-us/"><img src="{% static 'main_page/img/core-img/nvi.png' %}" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/ansys.png' %}" alt=""></a>
+                            <a href="https://www.ansys.com/en-in"><img src="{% static 'main_page/img/core-img/ansys.png' %}" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/ralson.png' %}" alt=""></a>
+                            <a href="https://www.ralson.com/"><img src="{% static 'main_page/img/core-img/ralson.png' %}" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/safe.png' %}" alt=""></a>
+                            <a href="http://www.safexpress.com/"><img src="{% static 'main_page/img/core-img/safe.png' %}" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
+                            <a href="https://chandigarhx.com/"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/story.png' %}" alt=""></a>
+                            <a href="https://yourstory.com/"><img src="{% static 'main_page/img/core-img/story.png' %}" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
+                            <a href="https://collegedunia.com/"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/punjab.jpg' %}" alt=""></a>
+                            <a href="https://punjabkesari.com/"><img src="{% static 'main_page/img/core-img/punjab.jpg' %}" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -100,34 +100,34 @@
                     <div class="our-sponsor-area d-flex flex-wrap">
                     
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/youth.png' %}" alt=""></a>
+                            <a href="https://youthincmag.com/"><img src="{% static 'main_page/img/core-img/youth.png' %}" alt=""></a>
                         </div>
                     
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/download.png' %}" alt=""></a>
+                            <a href="https://influence.co/campusbloggers"><img src="{% static 'main_page/img/core-img/download.png' %}" alt=""></a>
                         </div>
                     
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/feevin.jpg' %}" alt=""></a>
+                            <a href="https://feevin.in/"><img src="{% static 'main_page/img/core-img/feevin.jpg' %}" alt=""></a>
                         </div>
                         
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/faadoo.png' %}" alt=""></a>
+                            <a href="http://www.faadooengineers.com/"><img src="{% static 'main_page/img/core-img/faadoo.png' %}" alt=""></a>
                         </div>
         
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/know.png' %}" alt=""></a>
+                            <a href="http://www.knowafest.com/college-fests/events"><img src="{% static 'main_page/img/core-img/know.png' %}" alt=""></a>
                         </div>
         
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/duex.png' %}" alt=""></a>
+                            <a href="https://duexpress.in/"><img src="{% static 'main_page/img/core-img/duex.png' %}" alt=""></a>
                         </div>
                         
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
+                            <a href="https://chandigarhx.com/"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
+                            <a href="https://collegedunia.com/"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
                         </div>
                     </div>
                 </div>
